fix spacing in highlight

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -64,9 +64,14 @@ $grayMediumLight: #eaeaea;
 .highlight{
   h2{
     color: #f0ad4e;
+    padding-top: 10px;
+    padding-left: 10px;
   }
   h3{
     color: #f0ad4e;
+  }
+  p{
+    padding-right: 10px;
   }
   background-color: #FFF6E6;
 }
